# ord_sender

./: .gitignore  Cargo.toml  README.md  csv_to_json.sh  justfile  test_manifest.json
src/: main.rs  settings.rs
src/tx/: builder.rs  dummy_witness.rs  inscription_id_resolver.rs  manifest.rs  mod.rs
