[package]
name = "ord_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ascii_table = "4.0.3"
base64 = { version = "0.22.0", features = [] }
bitcoin = "0.31.1"
bitcoincore-rpc = "0.18.0"
clap = { version = "4.4.17", features = ["derive"] }
csv = "1.3.0"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.21"
reqwest = { version = "0.11.24" , features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"